hyperlinks problem - solution

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -1,243 +1,336 @@
-\begin{solution}{1.1}
+\protect \hypertarget {soln:1.1}{}
+\begin{solution}{{1.1}}
   $\P(X=1)=3/5$, $\P(X=2)=3/10$, $\P(X=3)=1/10$, $\E(X)=1.5$
 \end{solution}
-\begin{solution}{1.2}
+\protect \hypertarget {soln:1.2}{}
+\begin{solution}{{1.2}}
 \end{solution}
-\begin{solution}{1.3}
+\protect \hypertarget {soln:1.3}{}
+\begin{solution}{{1.3}}
 \end{solution}
-\begin{solution}{1.4}
+\protect \hypertarget {soln:1.4}{}
+\begin{solution}{{1.4}}
    N 3 4 5
 
   2/8 3/8 3/8
 \end{solution}
-\begin{solution}{1.5}
+\protect \hypertarget {soln:1.5}{}
+\begin{solution}{{1.5}}
 \end{solution}
-\begin{solution}{1.6}
+\protect \hypertarget {soln:1.6}{}
+\begin{solution}{{1.6}}
   5/11 и 6/11
 \end{solution}
-\begin{solution}{1.7}
+\protect \hypertarget {soln:1.7}{}
+\begin{solution}{{1.7}}
   N — количество подбрасываний, G — количество орлов, R — решек
 
   E(N)=10/7, E(G)=1, E(R)=10/7-1=3/7
 \end{solution}
-\begin{solution}{1.8}
+\protect \hypertarget {soln:1.8}{}
+\begin{solution}{{1.8}}
 \end{solution}
-\begin{solution}{1.9}
+\protect \hypertarget {soln:1.9}{}
+\begin{solution}{{1.9}}
   у Саши 3/4
 \end{solution}
-\begin{solution}{1.10}
+\protect \hypertarget {soln:1.10}{}
+\begin{solution}{{1.10}}
   стоп на 4-5-6 или стоп на 5-6
 \end{solution}
-\begin{solution}{1.11}
+\protect \hypertarget {soln:1.11}{}
+\begin{solution}{{1.11}}
   $\P(X=4)=1/8$, $\E(X)=3$
 \end{solution}
-\begin{solution}{1.12}
+\protect \hypertarget {soln:1.12}{}
+\begin{solution}{{1.12}}
 \end{solution}
-\begin{solution}{2.1}
+\protect \hypertarget {soln:2.13}{}
+\begin{solution}{{2.13}}
 \end{solution}
-\begin{solution}{2.2}
+\protect \hypertarget {soln:2.14}{}
+\begin{solution}{{2.14}}
 \end{solution}
-\begin{solution}{2.3}
+\protect \hypertarget {soln:2.15}{}
+\begin{solution}{{2.15}}
 \end{solution}
-\begin{solution}{2.4}
+\protect \hypertarget {soln:2.16}{}
+\begin{solution}{{2.16}}
 \end{solution}
-\begin{solution}{2.5}
+\protect \hypertarget {soln:2.17}{}
+\begin{solution}{{2.17}}
 \end{solution}
-\begin{solution}{2.6}
+\protect \hypertarget {soln:2.18}{}
+\begin{solution}{{2.18}}
   1/2
 \end{solution}
-\begin{solution}{2.7}
+\protect \hypertarget {soln:2.19}{}
+\begin{solution}{{2.19}}
   $\E(X)=0.25\cdot 2 + 0.5\cdot (\E(X)+1)+0.25\cdot (\E(X)+2)$
 
   $\E(Y)=0.25\cdot 0 + 0.5\cdot (\E(Y)+1)+0.25\cdot (\E(Y)+1)$
 \end{solution}
-\begin{solution}{2.8}
+\protect \hypertarget {soln:2.20}{}
+\begin{solution}{{2.20}}
 стратегия 1: говорить стоп, если на кону 200 рублей вне зависимости от числа набранных красных карточек
 
  стратегия 2: если нет красных карточек или одна, то останавливаться при 200 рублях, а при двух карточках останавливаться на 100 рублях.
 \end{solution}
-\begin{solution}{2.9}
+\protect \hypertarget {soln:2.21}{}
+\begin{solution}{{2.21}}
 \end{solution}
-\begin{solution}{2.10}
+\protect \hypertarget {soln:2.22}{}
+\begin{solution}{{2.22}}
 \end{solution}
-\begin{solution}{2.11}
+\protect \hypertarget {soln:2.23}{}
+\begin{solution}{{2.23}}
 \end{solution}
-\begin{solution}{2.12}
+\protect \hypertarget {soln:2.24}{}
+\begin{solution}{{2.24}}
 \end{solution}
-\begin{solution}{2.13}
+\protect \hypertarget {soln:2.25}{}
+\begin{solution}{{2.25}}
 \end{solution}
-\begin{solution}{2.14}
+\protect \hypertarget {soln:2.26}{}
+\begin{solution}{{2.26}}
 \end{solution}
-\begin{solution}{2.15}
+\protect \hypertarget {soln:2.27}{}
+\begin{solution}{{2.27}}
 \end{solution}
-\begin{solution}{2.16}
+\protect \hypertarget {soln:2.28}{}
+\begin{solution}{{2.28}}
 \end{solution}
-\begin{solution}{3.1}
+\protect \hypertarget {soln:3.29}{}
+\begin{solution}{{3.29}}
   $\P(A\mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{1/3}{1/6+1/3}=2/3$
 \end{solution}
-\begin{solution}{3.2}
+\protect \hypertarget {soln:3.30}{}
+\begin{solution}{{3.30}}
   $A$ -- первый охотник попал в утку, $B$ — в утку попала ровно одна пуля
 
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{0.4 \cdot 0.3 }{0.4\cdot 0.3 + 0.6\cdot 0.7}=2/9$
 \end{solution}
-\begin{solution}{3.3}
+\protect \hypertarget {soln:3.31}{}
+\begin{solution}{{3.31}}
   $\P(A \mid B)=1/6$
 \end{solution}
-\begin{solution}{3.4}
+\protect \hypertarget {soln:3.32}{}
+\begin{solution}{{3.32}}
   $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
 \end{solution}
-\begin{solution}{3.5}
+\protect \hypertarget {soln:3.33}{}
+\begin{solution}{{3.33}}
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{7\cdot 11 /C_{7+5+11}^2}{(7\cdot 11+5\cdot 11 + 7\cdot 5) /C_{7+5+11}^2 }$
 \end{solution}
-\begin{solution}{3.6}
+\protect \hypertarget {soln:3.34}{}
+\begin{solution}{{3.34}}
   $B$ — событие, второй — черный, $\P(B)=11/16$
 
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{\frac{5}{16}\frac{11}{15}}{11/16}$
 \end{solution}
-\begin{solution}{3.7}
+\protect \hypertarget {soln:3.35}{}
+\begin{solution}{{3.35}}
   $A$ — партия мяса заражена, $B$ — партия мяса по тесту заражена
 
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{0.04\cdot 0.9}{0.04\cdot 0.9+0.96\cdot 0.1}\approx 0.27$
 \end{solution}
-\begin{solution}{3.8}
+\protect \hypertarget {soln:3.36}{}
+\begin{solution}{{3.36}}
   $A$ — Петя из Б класса, $B$ — Петя обожает географию
 
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{0.4/3}{0.3/3+0.4/3+0.7/3}=2/7$
 \end{solution}
-\begin{solution}{3.9}
+\protect \hypertarget {soln:3.37}{}
+\begin{solution}{{3.37}}
   $1/3$
 \end{solution}
-\begin{solution}{3.10}
+\protect \hypertarget {soln:3.38}{}
+\begin{solution}{{3.38}}
   да
 \end{solution}
-\begin{solution}{3.11}
+\protect \hypertarget {soln:3.39}{}
+\begin{solution}{{3.39}}
   нет, $(4/52)\cdot (3/51)=\P(A\cap B) \neq \P(A)\cdot \P(B)=(4/52)^2$
 \end{solution}
-\begin{solution}{3.12}
+\protect \hypertarget {soln:3.40}{}
+\begin{solution}{{3.40}}
 \end{solution}
-\begin{solution}{3.13}
+\protect \hypertarget {soln:3.41}{}
+\begin{solution}{{3.41}}
 $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{solution}
-\begin{solution}{4.1}
+\protect \hypertarget {soln:4.42}{}
+\begin{solution}{{4.42}}
 \end{solution}
-\begin{solution}{4.2}
+\protect \hypertarget {soln:4.43}{}
+\begin{solution}{{4.43}}
 \end{solution}
-\begin{solution}{4.3}
+\protect \hypertarget {soln:4.44}{}
+\begin{solution}{{4.44}}
 \end{solution}
-\begin{solution}{4.4}
+\protect \hypertarget {soln:4.45}{}
+\begin{solution}{{4.45}}
 \end{solution}
-\begin{solution}{4.5}
+\protect \hypertarget {soln:4.46}{}
+\begin{solution}{{4.46}}
 \end{solution}
-\begin{solution}{5.1}
+\protect \hypertarget {soln:5.47}{}
+\begin{solution}{{5.47}}
 \end{solution}
-\begin{solution}{5.2}
+\protect \hypertarget {soln:5.48}{}
+\begin{solution}{{5.48}}
 \end{solution}
-\begin{solution}{5.3}
+\protect \hypertarget {soln:5.49}{}
+\begin{solution}{{5.49}}
 \end{solution}
-\begin{solution}{5.4}
+\protect \hypertarget {soln:5.50}{}
+\begin{solution}{{5.50}}
 \end{solution}
-\begin{solution}{5.5}
+\protect \hypertarget {soln:5.51}{}
+\begin{solution}{{5.51}}
 \end{solution}
-\begin{solution}{5.6}
+\protect \hypertarget {soln:5.52}{}
+\begin{solution}{{5.52}}
 \end{solution}
-\begin{solution}{5.7}
+\protect \hypertarget {soln:5.53}{}
+\begin{solution}{{5.53}}
 \end{solution}
-\begin{solution}{5.8}
+\protect \hypertarget {soln:5.54}{}
+\begin{solution}{{5.54}}
 \end{solution}
-\begin{solution}{5.9}
+\protect \hypertarget {soln:5.55}{}
+\begin{solution}{{5.55}}
 \end{solution}
-\begin{solution}{5.10}
+\protect \hypertarget {soln:5.56}{}
+\begin{solution}{{5.56}}
 \end{solution}
-\begin{solution}{5.11}
+\protect \hypertarget {soln:5.57}{}
+\begin{solution}{{5.57}}
 \end{solution}
-\begin{solution}{5.12}
+\protect \hypertarget {soln:5.58}{}
+\begin{solution}{{5.58}}
 при $c=1/\E(X)$
 \end{solution}
-\begin{solution}{5.13}
+\protect \hypertarget {soln:5.59}{}
+\begin{solution}{{5.59}}
 \end{solution}
-\begin{solution}{5.14}
+\protect \hypertarget {soln:5.60}{}
+\begin{solution}{{5.60}}
 \end{solution}
-\begin{solution}{5.15}
+\protect \hypertarget {soln:5.61}{}
+\begin{solution}{{5.61}}
 \end{solution}
-\begin{solution}{5.16}
+\protect \hypertarget {soln:5.62}{}
+\begin{solution}{{5.62}}
 \end{solution}
-\begin{solution}{6.1}
+\protect \hypertarget {soln:6.63}{}
+\begin{solution}{{6.63}}
 \end{solution}
-\begin{solution}{6.2}
+\protect \hypertarget {soln:6.64}{}
+\begin{solution}{{6.64}}
 \end{solution}
-\begin{solution}{6.3}
+\protect \hypertarget {soln:6.65}{}
+\begin{solution}{{6.65}}
 $1.75$
 \end{solution}
-\begin{solution}{6.4}
+\protect \hypertarget {soln:6.66}{}
+\begin{solution}{{6.66}}
   $\E(X_0)=100\cdot \frac{99}{464} + \frac{100}{464} + \ldots + \frac{464}{464}$
 \end{solution}
-\begin{solution}{6.5}
+\protect \hypertarget {soln:6.67}{}
+\begin{solution}{{6.67}}
 \end{solution}
-\begin{solution}{6.6}
+\protect \hypertarget {soln:6.68}{}
+\begin{solution}{{6.68}}
 $\E(X)=1$, $\Var(X)=1$
 \end{solution}
-\begin{solution}{6.7}
+\protect \hypertarget {soln:6.69}{}
+\begin{solution}{{6.69}}
 $\E(Y)=20-20 \left( \frac{19}{20} \right)^{10}\approx 8.025$
 \end{solution}
-\begin{solution}{6.8}
+\protect \hypertarget {soln:6.70}{}
+\begin{solution}{{6.70}}
 $\E(X)=9$, $\Var(X)=1.2$
 \end{solution}
-\begin{solution}{6.9}
+\protect \hypertarget {soln:6.71}{}
+\begin{solution}{{6.71}}
   $10 \cdot 0.9^7$
 \end{solution}
-\begin{solution}{6.10}
+\protect \hypertarget {soln:6.72}{}
+\begin{solution}{{6.72}}
   $\E(X)=\frac{30}{30} + \frac{30}{29} + \ldots + \frac{30}{1}\approx 119.85$
 
   аппроксимация через логарифм $30 \ln 30 \approx 102$
 \end{solution}
-\begin{solution}{6.11}
+\protect \hypertarget {soln:6.73}{}
+\begin{solution}{{6.73}}
 \end{solution}
-\begin{solution}{6.12}
+\protect \hypertarget {soln:6.74}{}
+\begin{solution}{{6.74}}
 \end{solution}
-\begin{solution}{6.13}
+\protect \hypertarget {soln:6.75}{}
+\begin{solution}{{6.75}}
 \end{solution}
-\begin{solution}{6.14}
+\protect \hypertarget {soln:6.76}{}
+\begin{solution}{{6.76}}
 \end{solution}
-\begin{solution}{6.15}
+\protect \hypertarget {soln:6.77}{}
+\begin{solution}{{6.77}}
 \end{solution}
-\begin{solution}{6.16}
+\protect \hypertarget {soln:6.78}{}
+\begin{solution}{{6.78}}
 \end{solution}
-\begin{solution}{6.17}
+\protect \hypertarget {soln:6.79}{}
+\begin{solution}{{6.79}}
 \end{solution}
-\begin{solution}{6.18}
+\protect \hypertarget {soln:6.80}{}
+\begin{solution}{{6.80}}
 \end{solution}
-\begin{solution}{6.19}
+\protect \hypertarget {soln:6.81}{}
+\begin{solution}{{6.81}}
 \end{solution}
-\begin{solution}{6.20}
+\protect \hypertarget {soln:6.82}{}
+\begin{solution}{{6.82}}
 \end{solution}
-\begin{solution}{6.21}
+\protect \hypertarget {soln:6.83}{}
+\begin{solution}{{6.83}}
 \end{solution}
-\begin{solution}{6.22}
+\protect \hypertarget {soln:6.84}{}
+\begin{solution}{{6.84}}
 \end{solution}
-\begin{solution}{6.23}
+\protect \hypertarget {soln:6.85}{}
+\begin{solution}{{6.85}}
 \end{solution}
-\begin{solution}{6.24}
+\protect \hypertarget {soln:6.86}{}
+\begin{solution}{{6.86}}
 \end{solution}
-\begin{solution}{7.1}
+\protect \hypertarget {soln:7.87}{}
+\begin{solution}{{7.87}}
   $\P(X_8=13)=e^{-8.8}8.8^{13}/13!\approx 0.046$
 
   $\P(Y_{n+1}>1)=e^{-1.1}\approx 0.33$
 \end{solution}
-\begin{solution}{7.2}
+\protect \hypertarget {soln:7.88}{}
+\begin{solution}{{7.88}}
 \end{solution}
-\begin{solution}{7.3}
+\protect \hypertarget {soln:7.89}{}
+\begin{solution}{{7.89}}
 \end{solution}
-\begin{solution}{7.4}
+\protect \hypertarget {soln:7.90}{}
+\begin{solution}{{7.90}}
 \end{solution}
-\begin{solution}{7.5}
+\protect \hypertarget {soln:7.91}{}
+\begin{solution}{{7.91}}
 $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $\frac{1}{a+b}$
 \end{solution}
-\begin{solution}{7.6}
+\protect \hypertarget {soln:7.92}{}
+\begin{solution}{{7.92}}
   геометрическое распределение
 
   $\E(N)=\frac{\lambda_{in}}{\lambda_{capacity}-\lambda_{in}}$
 \end{solution}
-\begin{solution}{7.7}
+\protect \hypertarget {soln:7.93}{}
+\begin{solution}{{7.93}}
   The probability of observing a taxi before a bus is given by $3/(3+2)=3/5$ since the
 
   waiting times are independent and exponentially distributed. By the memoryless
@@ -245,39 +338,54 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
   two taxis before the first bus is $(3/5)^2=9/25$. The probability of observing exactly
   two taxis before the first bus is $(3/5)^2*(2/5)=18/125$.
 \end{solution}
-\begin{solution}{7.8}
+\protect \hypertarget {soln:7.94}{}
+\begin{solution}{{7.94}}
 \end{solution}
-\begin{solution}{7.9}
+\protect \hypertarget {soln:7.95}{}
+\begin{solution}{{7.95}}
 \end{solution}
-\begin{solution}{7.10}
+\protect \hypertarget {soln:7.96}{}
+\begin{solution}{{7.96}}
 \end{solution}
-\begin{solution}{7.11}
+\protect \hypertarget {soln:7.97}{}
+\begin{solution}{{7.97}}
 \end{solution}
-\begin{solution}{7.12}
+\protect \hypertarget {soln:7.98}{}
+\begin{solution}{{7.98}}
 \end{solution}
-\begin{solution}{7.13}
+\protect \hypertarget {soln:7.99}{}
+\begin{solution}{{7.99}}
 \end{solution}
-\begin{solution}{7.14}
+\protect \hypertarget {soln:7.100}{}
+\begin{solution}{{7.100}}
 \end{solution}
-\begin{solution}{7.15}
+\protect \hypertarget {soln:7.101}{}
+\begin{solution}{{7.101}}
 \end{solution}
-\begin{solution}{7.16}
+\protect \hypertarget {soln:7.102}{}
+\begin{solution}{{7.102}}
   \[ a(t+\Delta)=a(t)(1-\Delta)+(1-a(t))\Delta + o(\Delta) \]
   сейчас четное = за секунду было четное и никто не зашел + за секунду было нечетное и один зашел
   $a'(t)=1-2a(t)$, $a(0)=1$
   $a(t)=(1+\exp(-2t))/2$
 \end{solution}
-\begin{solution}{7.17}
+\protect \hypertarget {soln:7.103}{}
+\begin{solution}{{7.103}}
 \end{solution}
-\begin{solution}{8.1}
+\protect \hypertarget {soln:8.104}{}
+\begin{solution}{{8.104}}
 \end{solution}
-\begin{solution}{8.2}
+\protect \hypertarget {soln:8.105}{}
+\begin{solution}{{8.105}}
 \end{solution}
-\begin{solution}{8.3}
+\protect \hypertarget {soln:8.106}{}
+\begin{solution}{{8.106}}
 \end{solution}
-\begin{solution}{8.4}
+\protect \hypertarget {soln:8.107}{}
+\begin{solution}{{8.107}}
 \end{solution}
-\begin{solution}{8.5}
+\protect \hypertarget {soln:8.108}{}
+\begin{solution}{{8.108}}
   \[
   \P(X>0.5) = 1 - \P(X\leq 0.5) = 1 - P(X\leq 0.5, Y\leq +\infty) = 1 - F(0.5, +\infty)
   \]
@@ -285,7 +393,8 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 
   $X$ и $Y$ независимы, так как $F(x,y)=F(x)\cdot F(y)$
 \end{solution}
-\begin{solution}{8.6}
+\protect \hypertarget {soln:8.109}{}
+\begin{solution}{{8.109}}
   можно через смешанную производную функции распределения $F(l,r)$
   можно через разложение $f(l|r)\cdot f(r)$
   \[
@@ -295,53 +404,72 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
   \end{cases}
   \]
 \end{solution}
-\begin{solution}{8.7}
+\protect \hypertarget {soln:8.110}{}
+\begin{solution}{{8.110}}
 \end{solution}
-\begin{solution}{8.8}
+\protect \hypertarget {soln:8.111}{}
+\begin{solution}{{8.111}}
   Например, $X\sim U[0;1]$ и $Y=X$
 \end{solution}
-\begin{solution}{8.9}
+\protect \hypertarget {soln:8.112}{}
+\begin{solution}{{8.112}}
 $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \end{solution}
-\begin{solution}{8.10}
+\protect \hypertarget {soln:8.113}{}
+\begin{solution}{{8.113}}
 \end{solution}
-\begin{solution}{8.11}
+\protect \hypertarget {soln:8.114}{}
+\begin{solution}{{8.114}}
 \end{solution}
-\begin{solution}{8.12}
+\protect \hypertarget {soln:8.115}{}
+\begin{solution}{{8.115}}
       $\Cov(X,Y)=0$, зависимы
 \end{solution}
-\begin{solution}{8.13}
+\protect \hypertarget {soln:8.116}{}
+\begin{solution}{{8.116}}
     $\Cov(X,Y)=0$, зависимы
 \end{solution}
-\begin{solution}{8.14}
+\protect \hypertarget {soln:8.117}{}
+\begin{solution}{{8.117}}
   $\Cov(X,Y)=0$, зависимы
 \end{solution}
-\begin{solution}{8.15}
+\protect \hypertarget {soln:8.118}{}
+\begin{solution}{{8.118}}
   $-1/5$
 \end{solution}
-\begin{solution}{8.16}
+\protect \hypertarget {soln:8.119}{}
+\begin{solution}{{8.119}}
 \end{solution}
-\begin{solution}{8.17}
+\protect \hypertarget {soln:8.120}{}
+\begin{solution}{{8.120}}
 \end{solution}
-\begin{solution}{8.18}
+\protect \hypertarget {soln:8.121}{}
+\begin{solution}{{8.121}}
 \end{solution}
-\begin{solution}{8.19}
+\protect \hypertarget {soln:8.122}{}
+\begin{solution}{{8.122}}
   нет, например, берем независимые $X$ и $Z$ и возьмём $Y=X+Z$.
 \end{solution}
-\begin{solution}{8.20}
+\protect \hypertarget {soln:8.123}{}
+\begin{solution}{{8.123}}
 нет
 \end{solution}
-\begin{solution}{8.21}
+\protect \hypertarget {soln:8.124}{}
+\begin{solution}{{8.124}}
   корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
 \end{solution}
-\begin{solution}{9.1}
+\protect \hypertarget {soln:9.125}{}
+\begin{solution}{{9.125}}
 \end{solution}
-\begin{solution}{9.2}
+\protect \hypertarget {soln:9.126}{}
+\begin{solution}{{9.126}}
 \end{solution}
-\begin{solution}{9.3}
+\protect \hypertarget {soln:9.127}{}
+\begin{solution}{{9.127}}
 $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
-\begin{solution}{9.4}
+\protect \hypertarget {soln:9.128}{}
+\begin{solution}{{9.128}}
   \[
   f_{|X|}(t) =
   \begin{cases}
@@ -350,162 +478,228 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \end{cases}
   \]
 \end{solution}
-\begin{solution}{9.5}
+\protect \hypertarget {soln:9.129}{}
+\begin{solution}{{9.129}}
   медиана — $\exp(\mu)$
   мода — $\exp(\mu - \sigma^2)$
   $\E(Y)=\exp(\mu+\sigma^2/2)$
   $\Var(Y)=\exp(2\mu + 2\sigma^2)-\exp(2\mu + \sigma^2)$
 
 \end{solution}
-\begin{solution}{9.6}
+\protect \hypertarget {soln:9.130}{}
+\begin{solution}{{9.130}}
 \end{solution}
-\begin{solution}{9.7}
+\protect \hypertarget {soln:9.131}{}
+\begin{solution}{{9.131}}
   Применяем формулу интегрирования по частям.
 \end{solution}
-\begin{solution}{10.1}
+\protect \hypertarget {soln:10.132}{}
+\begin{solution}{{10.132}}
   b $4/20\geq 1-100/12$
 
   c $1-e^{-3}\geq 0.75$
 \end{solution}
-\begin{solution}{10.2}
+\protect \hypertarget {soln:10.133}{}
+\begin{solution}{{10.133}}
   $\Var(X)\leq 5$
 \end{solution}
-\begin{solution}{10.3}
+\protect \hypertarget {soln:10.134}{}
+\begin{solution}{{10.134}}
   $\P(X<20) \geq 0.5$
 \end{solution}
-\begin{solution}{11.1}
+\protect \hypertarget {soln:11.135}{}
+\begin{solution}{{11.135}}
 \end{solution}
-\begin{solution}{11.2}
+\protect \hypertarget {soln:11.136}{}
+\begin{solution}{{11.136}}
 \end{solution}
-\begin{solution}{11.3}
+\protect \hypertarget {soln:11.137}{}
+\begin{solution}{{11.137}}
 \end{solution}
-\begin{solution}{11.4}
+\protect \hypertarget {soln:11.138}{}
+\begin{solution}{{11.138}}
   $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
 \end{solution}
-\begin{solution}{11.5}
+\protect \hypertarget {soln:11.139}{}
+\begin{solution}{{11.139}}
 \end{solution}
-\begin{solution}{11.6}
+\protect \hypertarget {soln:11.140}{}
+\begin{solution}{{11.140}}
 \end{solution}
-\begin{solution}{11.7}
+\protect \hypertarget {soln:11.141}{}
+\begin{solution}{{11.141}}
 \end{solution}
-\begin{solution}{11.8}
+\protect \hypertarget {soln:11.142}{}
+\begin{solution}{{11.142}}
   $4(\sqrt{2}-1)/3$, 20 problems
 \end{solution}
-\begin{solution}{11.9}
+\protect \hypertarget {soln:11.143}{}
+\begin{solution}{{11.143}}
   $2/\pi$, 20 problems
 \end{solution}
-\begin{solution}{12.1}
+\protect \hypertarget {soln:12.144}{}
+\begin{solution}{{12.144}}
 \end{solution}
-\begin{solution}{12.2}
+\protect \hypertarget {soln:12.145}{}
+\begin{solution}{{12.145}}
 \end{solution}
-\begin{solution}{12.3}
+\protect \hypertarget {soln:12.146}{}
+\begin{solution}{{12.146}}
 \end{solution}
-\begin{solution}{12.4}
+\protect \hypertarget {soln:12.147}{}
+\begin{solution}{{12.147}}
 \end{solution}
-\begin{solution}{12.5}
+\protect \hypertarget {soln:12.148}{}
+\begin{solution}{{12.148}}
 \end{solution}
-\begin{solution}{12.6}
+\protect \hypertarget {soln:12.149}{}
+\begin{solution}{{12.149}}
 \end{solution}
-\begin{solution}{12.7}
+\protect \hypertarget {soln:12.150}{}
+\begin{solution}{{12.150}}
 \end{solution}
-\begin{solution}{12.8}
+\protect \hypertarget {soln:12.151}{}
+\begin{solution}{{12.151}}
 \end{solution}
-\begin{solution}{12.9}
+\protect \hypertarget {soln:12.152}{}
+\begin{solution}{{12.152}}
 \end{solution}
-\begin{solution}{12.10}
+\protect \hypertarget {soln:12.153}{}
+\begin{solution}{{12.153}}
 \end{solution}
-\begin{solution}{12.11}
+\protect \hypertarget {soln:12.154}{}
+\begin{solution}{{12.154}}
 \end{solution}
-\begin{solution}{12.12}
+\protect \hypertarget {soln:12.155}{}
+\begin{solution}{{12.155}}
 \end{solution}
-\begin{solution}{12.13}
+\protect \hypertarget {soln:12.156}{}
+\begin{solution}{{12.156}}
 \end{solution}
-\begin{solution}{12.14}
+\protect \hypertarget {soln:12.157}{}
+\begin{solution}{{12.157}}
 \end{solution}
-\begin{solution}{12.15}
+\protect \hypertarget {soln:12.158}{}
+\begin{solution}{{12.158}}
 \end{solution}
-\begin{solution}{12.16}
+\protect \hypertarget {soln:12.159}{}
+\begin{solution}{{12.159}}
 \end{solution}
-\begin{solution}{12.17}
+\protect \hypertarget {soln:12.160}{}
+\begin{solution}{{12.160}}
 \end{solution}
-\begin{solution}{13.1}
+\protect \hypertarget {soln:13.161}{}
+\begin{solution}{{13.161}}
 \end{solution}
-\begin{solution}{13.2}
+\protect \hypertarget {soln:13.162}{}
+\begin{solution}{{13.162}}
 \end{solution}
-\begin{solution}{13.3}
+\protect \hypertarget {soln:13.163}{}
+\begin{solution}{{13.163}}
   $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
   Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
-\begin{solution}{13.4}
+\protect \hypertarget {soln:13.164}{}
+\begin{solution}{{13.164}}
 \end{solution}
-\begin{solution}{13.5}
+\protect \hypertarget {soln:13.165}{}
+\begin{solution}{{13.165}}
   $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
   В среднем Машка не становиться ни грустней, ни улыбчивей
   Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
-\begin{solution}{13.6}
+\protect \hypertarget {soln:13.166}{}
+\begin{solution}{{13.166}}
 \end{solution}
-\begin{solution}{13.7}
+\protect \hypertarget {soln:13.167}{}
+\begin{solution}{{13.167}}
 \end{solution}
-\begin{solution}{13.8}
+\protect \hypertarget {soln:13.168}{}
+\begin{solution}{{13.168}}
 \end{solution}
-\begin{solution}{13.9}
+\protect \hypertarget {soln:13.169}{}
+\begin{solution}{{13.169}}
 \end{solution}
-\begin{solution}{13.10}
+\protect \hypertarget {soln:13.170}{}
+\begin{solution}{{13.170}}
   $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{solution}
-\begin{solution}{14.1}
+\protect \hypertarget {soln:14.171}{}
+\begin{solution}{{14.171}}
 \end{solution}
-\begin{solution}{14.2}
+\protect \hypertarget {soln:14.172}{}
+\begin{solution}{{14.172}}
 \end{solution}
-\begin{solution}{14.3}
+\protect \hypertarget {soln:14.173}{}
+\begin{solution}{{14.173}}
 Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
 \end{solution}
-\begin{solution}{14.4}
+\protect \hypertarget {soln:14.174}{}
+\begin{solution}{{14.174}}
 \end{solution}
-\begin{solution}{14.5}
+\protect \hypertarget {soln:14.175}{}
+\begin{solution}{{14.175}}
 \end{solution}
-\begin{solution}{15.1}
+\protect \hypertarget {soln:15.176}{}
+\begin{solution}{{15.176}}
 Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
-\begin{solution}{15.2}
+\protect \hypertarget {soln:15.177}{}
+\begin{solution}{{15.177}}
 Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
-\begin{solution}{15.3}
+\protect \hypertarget {soln:15.178}{}
+\begin{solution}{{15.178}}
 \end{solution}
-\begin{solution}{15.4}
+\protect \hypertarget {soln:15.179}{}
+\begin{solution}{{15.179}}
 \end{solution}
-\begin{solution}{15.5}
+\protect \hypertarget {soln:15.180}{}
+\begin{solution}{{15.180}}
 \end{solution}
-\begin{solution}{15.6}
+\protect \hypertarget {soln:15.181}{}
+\begin{solution}{{15.181}}
   два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
 \end{solution}
-\begin{solution}{15.7}
+\protect \hypertarget {soln:15.182}{}
+\begin{solution}{{15.182}}
   Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
 \end{solution}
-\begin{solution}{15.8}
+\protect \hypertarget {soln:15.183}{}
+\begin{solution}{{15.183}}
 \end{solution}
-\begin{solution}{15.9}
+\protect \hypertarget {soln:15.184}{}
+\begin{solution}{{15.184}}
 \end{solution}
-\begin{solution}{15.10}
+\protect \hypertarget {soln:15.185}{}
+\begin{solution}{{15.185}}
 \end{solution}
-\begin{solution}{15.11}
+\protect \hypertarget {soln:15.186}{}
+\begin{solution}{{15.186}}
 \end{solution}
-\begin{solution}{15.12}
+\protect \hypertarget {soln:15.187}{}
+\begin{solution}{{15.187}}
 \end{solution}
-\begin{solution}{15.13}
+\protect \hypertarget {soln:15.188}{}
+\begin{solution}{{15.188}}
 \end{solution}
-\begin{solution}{16.1}
+\protect \hypertarget {soln:16.189}{}
+\begin{solution}{{16.189}}
 \end{solution}
-\begin{solution}{16.2}
+\protect \hypertarget {soln:16.190}{}
+\begin{solution}{{16.190}}
 \end{solution}
-\begin{solution}{16.3}
+\protect \hypertarget {soln:16.191}{}
+\begin{solution}{{16.191}}
 \end{solution}
-\begin{solution}{16.4}
+\protect \hypertarget {soln:16.192}{}
+\begin{solution}{{16.192}}
 \end{solution}
-\begin{solution}{16.5}
+\protect \hypertarget {soln:16.193}{}
+\begin{solution}{{16.193}}
 \end{solution}
-\begin{solution}{17.1}
+\protect \hypertarget {soln:17.194}{}
+\begin{solution}{{17.194}}
   Метод максимального правдоподобия:
   \[
     C_n^{Y_{\text{к}}}C_{n-Y_{\text{к}}}^{Y_{\text{щ}}}a^{Y_{\text{к}}}(2a)^{Y_{\text{щ}}}(1-3a)^{Y_{\text{б}}} \to \max_a
@@ -520,7 +714,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 С точки зрения Пса Шарика, неизвестными являются две вероятности, $a$ и $b$. Он решает задачу максимизации по двум переменным. В результате получается вполне себе интуитивная оценка $\hat a_{\text{ПШ}} = Y_{\text{к}}/n$.
 
 \end{solution}
-\begin{solution}{17.2}
+\protect \hypertarget {soln:17.195}{}
+\begin{solution}{{17.195}}
 Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
@@ -534,61 +729,87 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \hat n_{MM} = \frac{100}{\bar Y} = \frac{100^2}{S}
 \]
 \end{solution}
-\begin{solution}{17.3}
+\protect \hypertarget {soln:17.196}{}
+\begin{solution}{{17.196}}
 \end{solution}
-\begin{solution}{17.4}
+\protect \hypertarget {soln:17.197}{}
+\begin{solution}{{17.197}}
 \end{solution}
-\begin{solution}{17.5}
+\protect \hypertarget {soln:17.198}{}
+\begin{solution}{{17.198}}
 \end{solution}
-\begin{solution}{18.1}
+\protect \hypertarget {soln:18.199}{}
+\begin{solution}{{18.199}}
   $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
   $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
 \end{solution}
-\begin{solution}{18.2}
+\protect \hypertarget {soln:18.200}{}
+\begin{solution}{{18.200}}
 $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \end{solution}
-\begin{solution}{18.3}
+\protect \hypertarget {soln:18.201}{}
+\begin{solution}{{18.201}}
 \end{solution}
-\begin{solution}{18.4}
+\protect \hypertarget {soln:18.202}{}
+\begin{solution}{{18.202}}
 \end{solution}
-\begin{solution}{18.5}
+\protect \hypertarget {soln:18.203}{}
+\begin{solution}{{18.203}}
 \end{solution}
-\begin{solution}{18.6}
+\protect \hypertarget {soln:18.204}{}
+\begin{solution}{{18.204}}
 $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
-\begin{solution}{18.7}
+\protect \hypertarget {soln:18.205}{}
+\begin{solution}{{18.205}}
 \end{solution}
-\begin{solution}{18.8}
+\protect \hypertarget {soln:18.206}{}
+\begin{solution}{{18.206}}
 \end{solution}
-\begin{solution}{18.9}
+\protect \hypertarget {soln:18.207}{}
+\begin{solution}{{18.207}}
 \end{solution}
-\begin{solution}{18.10}
+\protect \hypertarget {soln:18.208}{}
+\begin{solution}{{18.208}}
 \end{solution}
-\begin{solution}{18.11}
+\protect \hypertarget {soln:18.209}{}
+\begin{solution}{{18.209}}
 \end{solution}
-\begin{solution}{18.12}
+\protect \hypertarget {soln:18.210}{}
+\begin{solution}{{18.210}}
 \end{solution}
-\begin{solution}{18.13}
+\protect \hypertarget {soln:18.211}{}
+\begin{solution}{{18.211}}
 \end{solution}
-\begin{solution}{18.14}
+\protect \hypertarget {soln:18.212}{}
+\begin{solution}{{18.212}}
 \end{solution}
-\begin{solution}{18.15}
+\protect \hypertarget {soln:18.213}{}
+\begin{solution}{{18.213}}
 \end{solution}
-\begin{solution}{18.16}
+\protect \hypertarget {soln:18.214}{}
+\begin{solution}{{18.214}}
 \end{solution}
-\begin{solution}{18.17}
+\protect \hypertarget {soln:18.215}{}
+\begin{solution}{{18.215}}
 \end{solution}
-\begin{solution}{18.18}
+\protect \hypertarget {soln:18.216}{}
+\begin{solution}{{18.216}}
 \end{solution}
-\begin{solution}{18.19}
+\protect \hypertarget {soln:18.217}{}
+\begin{solution}{{18.217}}
 \end{solution}
-\begin{solution}{18.20}
+\protect \hypertarget {soln:18.218}{}
+\begin{solution}{{18.218}}
 \end{solution}
-\begin{solution}{18.21}
+\protect \hypertarget {soln:18.219}{}
+\begin{solution}{{18.219}}
 \end{solution}
-\begin{solution}{18.22}
+\protect \hypertarget {soln:18.220}{}
+\begin{solution}{{18.220}}
 \end{solution}
-\begin{solution}{19.1}
+\protect \hypertarget {soln:19.221}{}
+\begin{solution}{{19.221}}
     \begin{enumerate}
       \item $c=1/n$, да
       \item $c=1/(n+\sigma^2/\mu^2)$, нет, так как $\mu$ и $\sigma$ неизвестны
@@ -596,7 +817,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\begin{solution}{19.2}
+\protect \hypertarget {soln:19.222}{}
+\begin{solution}{{19.222}}
     \begin{enumerate}
     \item несмещённая, состоятельная, линейная, неэффективная
     \item несмещённая, состоятельная, линейная, неэффективная
@@ -611,7 +833,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\begin{solution}{19.3}
+\protect \hypertarget {soln:19.223}{}
+\begin{solution}{{19.223}}
 \begin{enumerate}
 \item $\hat\theta_{ML} = \max\{ Y_1, Y_2, \ldots, Y_n\}$.
 \item Все $Y_i$ меньше $\theta$, значит и $\hat\theta$ всегда меньше $\theta$, значит смещённая.
@@ -620,150 +843,199 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \item $\hat\theta_{unbiased} = \frac{5n+1}{5n}\hat\theta$.
 \end{enumerate}
 \end{solution}
-\begin{solution}{19.4}
+\protect \hypertarget {soln:19.224}{}
+\begin{solution}{{19.224}}
 \begin{enumerate}
   \item $\hat p$ несмещённая
   \item $\sigma^2 = n p(1-p)$.
   \item $\E(\hat\sigma^2) = (n-1)p(1-p)$, смещённая, $\hat\sigma^2_{unbiased} = \frac{n}{n-1} \hat\sigma^2$.
 \end{enumerate}
 \end{solution}
-\begin{solution}{19.5}
+\protect \hypertarget {soln:19.225}{}
+\begin{solution}{{19.225}}
 
 \end{solution}
-\begin{solution}{19.6}
+\protect \hypertarget {soln:19.226}{}
+\begin{solution}{{19.226}}
 
 \end{solution}
-\begin{solution}{19.7}
+\protect \hypertarget {soln:19.227}{}
+\begin{solution}{{19.227}}
 
 \end{solution}
-\begin{solution}{19.8}
+\protect \hypertarget {soln:19.228}{}
+\begin{solution}{{19.228}}
 
 \end{solution}
-\begin{solution}{19.9}
+\protect \hypertarget {soln:19.229}{}
+\begin{solution}{{19.229}}
 
 \end{solution}
-\begin{solution}{19.10}
+\protect \hypertarget {soln:19.230}{}
+\begin{solution}{{19.230}}
 
 \end{solution}
-\begin{solution}{19.11}
+\protect \hypertarget {soln:19.231}{}
+\begin{solution}{{19.231}}
 
 \end{solution}
-\begin{solution}{19.12}
+\protect \hypertarget {soln:19.232}{}
+\begin{solution}{{19.232}}
   Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
   $\hat\theta_{unbiased} = 20X$.
 \end{solution}
-\begin{solution}{19.13}
+\protect \hypertarget {soln:19.233}{}
+\begin{solution}{{19.233}}
 
 \end{solution}
-\begin{solution}{19.14}
+\protect \hypertarget {soln:19.234}{}
+\begin{solution}{{19.234}}
 
 \end{solution}
-\begin{solution}{19.15}
+\protect \hypertarget {soln:19.235}{}
+\begin{solution}{{19.235}}
 
 \end{solution}
-\begin{solution}{20.1}
+\protect \hypertarget {soln:20.236}{}
+\begin{solution}{{20.236}}
   $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
 \end{solution}
-\begin{solution}{20.2}
+\protect \hypertarget {soln:20.237}{}
+\begin{solution}{{20.237}}
 \end{solution}
-\begin{solution}{20.3}
+\protect \hypertarget {soln:20.238}{}
+\begin{solution}{{20.238}}
 \end{solution}
-\begin{solution}{20.4}
+\protect \hypertarget {soln:20.239}{}
+\begin{solution}{{20.239}}
 \end{solution}
-\begin{solution}{20.5}
+\protect \hypertarget {soln:20.240}{}
+\begin{solution}{{20.240}}
 \end{solution}
-\begin{solution}{20.6}
+\protect \hypertarget {soln:20.241}{}
+\begin{solution}{{20.241}}
 Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
 \end{solution}
-\begin{solution}{20.7}
+\protect \hypertarget {soln:20.242}{}
+\begin{solution}{{20.242}}
 \end{solution}
-\begin{solution}{21.1}
+\protect \hypertarget {soln:21.243}{}
+\begin{solution}{{21.243}}
 к 1/2
 \end{solution}
-\begin{solution}{21.2}
+\protect \hypertarget {soln:21.244}{}
+\begin{solution}{{21.244}}
   равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
 \end{solution}
-\begin{solution}{21.3}
+\protect \hypertarget {soln:21.245}{}
+\begin{solution}{{21.245}}
   $\alpha = 1/8$, $\beta = 9/32$
 \end{solution}
-\begin{solution}{21.4}
+\protect \hypertarget {soln:21.246}{}
+\begin{solution}{{21.246}}
   $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
 \end{solution}
-\begin{solution}{21.5}
+\protect \hypertarget {soln:21.247}{}
+\begin{solution}{{21.247}}
 \end{solution}
-\begin{solution}{21.6}
+\protect \hypertarget {soln:21.248}{}
+\begin{solution}{{21.248}}
 \end{solution}
-\begin{solution}{21.7}
+\protect \hypertarget {soln:21.249}{}
+\begin{solution}{{21.249}}
 
 \end{solution}
-\begin{solution}{21.8}
+\protect \hypertarget {soln:21.250}{}
+\begin{solution}{{21.250}}
 Критерий Неймана-Пирсона сводится к сравнению $\bar X$ с порогом. При верной $H_0$ величина $\bar X$ распределена $\cN(0; \frac{4}{n})$.
 Отсюда искомый критерий имеет вид:
 Если $\bar X  \geqslant 0.825$, то гипотеза ${H_0}$ отвергается в пользу гипотезы ${H_a}$.
 \end{solution}
-\begin{solution}{21.9}
+\protect \hypertarget {soln:21.251}{}
+\begin{solution}{{21.251}}
   Упрощая неравенство из леммы Неймана-Пирсона, получаем критерий: если $X_1\cdot X_2 >t$, то $H_0$ отвергается. Величину $t$ находим из уравнения
 \[
 \int_0^t (1 - t/x) \, dx = 0.05
 \]
 \end{solution}
-\begin{solution}{21.10}
+\protect \hypertarget {soln:21.252}{}
+\begin{solution}{{21.252}}
 
 \end{solution}
-\begin{solution}{21.11}
+\protect \hypertarget {soln:21.253}{}
+\begin{solution}{{21.253}}
 \end{solution}
-\begin{solution}{22.1}
+\protect \hypertarget {soln:22.254}{}
+\begin{solution}{{22.254}}
 $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
-\begin{solution}{22.2}
+\protect \hypertarget {soln:22.255}{}
+\begin{solution}{{22.255}}
 
 \end{solution}
-\begin{solution}{22.3}
+\protect \hypertarget {soln:22.256}{}
+\begin{solution}{{22.256}}
 
 \end{solution}
-\begin{solution}{22.4}
+\protect \hypertarget {soln:22.257}{}
+\begin{solution}{{22.257}}
 
 \end{solution}
-\begin{solution}{22.5}
+\protect \hypertarget {soln:22.258}{}
+\begin{solution}{{22.258}}
 
 \end{solution}
-\begin{solution}{22.6}
+\protect \hypertarget {soln:22.259}{}
+\begin{solution}{{22.259}}
 
 \end{solution}
-\begin{solution}{23.1}
+\protect \hypertarget {soln:23.260}{}
+\begin{solution}{{23.260}}
 Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
-\begin{solution}{23.2}
+\protect \hypertarget {soln:23.261}{}
+\begin{solution}{{23.261}}
 
 \end{solution}
-\begin{solution}{23.3}
+\protect \hypertarget {soln:23.262}{}
+\begin{solution}{{23.262}}
 \end{solution}
-\begin{solution}{23.4}
+\protect \hypertarget {soln:23.263}{}
+\begin{solution}{{23.263}}
 \end{solution}
-\begin{solution}{23.5}
+\protect \hypertarget {soln:23.264}{}
+\begin{solution}{{23.264}}
 $(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
 \end{solution}
-\begin{solution}{23.6}
+\protect \hypertarget {soln:23.265}{}
+\begin{solution}{{23.265}}
 \end{solution}
-\begin{solution}{24.1}
+\protect \hypertarget {soln:24.266}{}
+\begin{solution}{{24.266}}
 $C_{20}^2\cdot 18$.
 \end{solution}
-\begin{solution}{24.2}
+\protect \hypertarget {soln:24.267}{}
+\begin{solution}{{24.267}}
   $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
   $1+x+x^2+x^3+\ldots = 1/(1-x)$
   $(1+x)^4$
 \end{solution}
-\begin{solution}{24.3}
+\protect \hypertarget {soln:24.268}{}
+\begin{solution}{{24.268}}
 \end{solution}
-\begin{solution}{24.4}
+\protect \hypertarget {soln:24.269}{}
+\begin{solution}{{24.269}}
 \end{solution}
-\begin{solution}{24.5}
+\protect \hypertarget {soln:24.270}{}
+\begin{solution}{{24.270}}
   0 с вероятностью 1/4 и 1 с вероятностью 3/4
 \end{solution}
-\begin{solution}{24.6}
+\protect \hypertarget {soln:24.271}{}
+\begin{solution}{{24.271}}
   да, сможет!
 \end{solution}
-\begin{solution}{24.7}
+\protect \hypertarget {soln:24.272}{}
+\begin{solution}{{24.272}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -775,16 +1047,20 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\begin{solution}{24.8}
+\protect \hypertarget {soln:24.273}{}
+\begin{solution}{{24.273}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\begin{solution}{24.9}
+\protect \hypertarget {soln:24.274}{}
+\begin{solution}{{24.274}}
 
 \end{solution}
-\begin{solution}{25.1}
+\protect \hypertarget {soln:25.275}{}
+\begin{solution}{{25.275}}
 \end{solution}
-\begin{solution}{25.2}
+\protect \hypertarget {soln:25.276}{}
+\begin{solution}{{25.276}}
 \end{solution}
